@@ -1,8 +1,9 @@
 package com.company;
 
 import lombok.Getter;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collector;
@@ -43,12 +44,17 @@ enum Color {
 }
 
 public class CollectorsPractice {
-    public static void main(String[] args) {
-        List<Car> cars = Arrays.asList(new Car("K5", Brand.HYUNDAI, Color.Green), new Car("A8", Brand.AUDI, Color.Black));
+
+    @Test
+    public void collectorTest() {
+        List<Car> cars = List.of(new Car("K5", Brand.HYUNDAI, Color.Green), new Car("A8", Brand.AUDI, Color.Black));
         Map<String, Map<Color, List<Car>>> carByBrandAndColor = cars.stream()
                                                                     .collect(groupingBy(Car::getName,
                                                                                         groupingBy(Car::getColor)));
 
         Collector<? super Car, ?, Map<Brand, Map<Color, List<Car>>>> carGroupingCollector = groupingBy(Car::getBrand, groupingBy(Car::getColor));
+        var car = groupingBy(Car::getBrand, groupingBy(Car::getColor));
+
+        Assertions.assertEquals(carGroupingCollector, car);
     }
 }
